tests/queryplan/errors/join_source_not_list.mochi
let m = { a: 1 }
let result = from x in [1]
             join from y in m on true
             select y
